# installer

./: .env  docker-compose.yml
services/be/: Dockerfile  config.py  main.py  pyproject.toml
services/be/api/: authentication.py  ping.py  questionare.py  services.py  user.py
services/be/db/: create.sql  crud.py  database.py  models.py
services/be/schemas/: pydantic_models.py
services/be/template/: email.html
services/be/utils/: __init__.py  auth.py  exceptions.py
