[tool.poetry]
name = "Omniroom-be"
version = "0.1.0"
description = ""
authors = ["mubashir4160 <mubashir.ali@darvis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "0.21.1"
SQLAlchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.7"}
redis = "^4.5.5"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
fastapi = "^0.95.1"
python-multipart = "^0.0.6"
black = "^23.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
